Refactoring: use Stream.toList()